# autonomous_systems

./: .gitignore  README.md
Final_Project/: metadata.yml
Final_Project/turtlebot3_gazebo/: CMakeLists.txt  README.md  package.xml
Final_Project/turtlebot3_gazebo/launch/: amcl.launch.py  map_loader.launch.py  mapper.launch.py  navigator.launch.py  spawn_cricketball.launch.py  task_6.launch.py  turtlebot3_bonus_world.launch.py  turtlebot3_house.launch.py  turtlebot3_house_norviz.launch.py
Final_Project/turtlebot3_gazebo/maps/: map.pgm  map.yaml
Final_Project/turtlebot3_gazebo/models/blue_object/: model.rsdf  model.sdf
Final_Project/turtlebot3_gazebo/models/green_object/: model.rsdf  model.sdf
Final_Project/turtlebot3_gazebo/models/red_object/: model.rsdf  model.sdf
Final_Project/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
Final_Project/turtlebot3_gazebo/params/: amcl.yaml  map_server.yaml  mapper_params_online_async.yaml
Final_Project/turtlebot3_gazebo/rviz/: tb3_gazebo.rviz
Final_Project/turtlebot3_gazebo/src/lab4/: spawn_objects.py  static_obstacles.py  task1.py  task2_bonus.py  task3.py
Final_Project/turtlebot3_gazebo/worlds/: Bonus  house_closed.world  turtlebot3_house.world
Lab1/: metadata.yml
Lab1/11/bag_files/task_1/: metadata.yaml  task_1_0.db3
Lab1/11/bag_files/task_2/: metadata.yaml  task_2_0.db3
Lab1/11/task_1/: package.xml  setup.py
Lab1/11/task_1/launch/: pub_sub_launch.py
Lab1/11/task_1/task_1/: listener.py  talker.py
Lab1/11/task_2/: package.xml  setup.py
Lab1/11/task_2/launch/: service_launch.py
Lab1/11/task_2/task_2/: client.py  listener.py  service.py  talker.py
Lab1/11/task_2_interfaces/: CMakeLists.txt  package.xml  setup.py
Lab1/11/task_2_interfaces/msg/: JointData.msg
Lab1/11/task_2_interfaces/srv/: JointState.srv
Lab4/: metadata.yml
Lab4/11/: extra_credit.txt  navigation_astar_f24 (8).ipynb
Lab4/11/bag_files/task_4/: metadata.yaml  task_4_0.db3
Lab4/11/task_4/: package.xml  setup.py
Lab4/11/task_4/launch/: gen_sync_map_launch.py
Lab4/11/task_4/maps/: classroom_map.pgm  classroom_map.yaml  sync_classroom_map.pgm  sync_classroom_map.yaml
Lab4/11/task_4/task_4/: auto_navigator.py
Lab4/11/task_5/: package.xml  setup.py
Lab4/11/task_5/launch/: object_detector_launch.py
Lab4/11/task_5/resource/: lab3_video.avi
Lab4/11/task_5/task_5/: image_publisher.py  object_detector.py
Lab4/11/task_6/: package.xml  setup.py
Lab4/11/task_6/launch/: red_ball_tracker_launch.py
Lab4/11/task_6/task_6/: red_ball_tracker.py
