<?xml version="1.0"?>
<package format="3">
  <name>task_2_interfaces</name>
  <version>0.0.0</version>
  <description>Custom service definitions for Task 2</description>

  <maintainer email="your_email@todo.todo">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROSIDL generators -->
  <depend>rosidl_default_generators</depend>

  <!-- Dependencies used in .msg/.srv -->
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>

  <!-- Runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Mark this as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
