<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task_4</name>
  <version>0.0.1</version>
  <description>Week 5 Task 4: generate mapping data with TurtleBot4 using SLAM + RViz2</description>
  <maintainer email="connor@todo.todo">connor</maintainer>
  <license>Apache-2.0</license>

  <!-- Core runtime dependency for Python nodes -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Additional Python dependencies -->
  <exec_depend>python3-transforms3d</exec_depend>

  <!-- TurtleBot4 mapping + visualization dependencies -->
  <exec_depend>turtlebot4_navigation</exec_depend>
  <exec_depend>turtlebot4_viz</exec_depend>

  <!-- Needed to save maps -->
  <exec_depend>nav2_map_server</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
